fix product service port, init product service, small refactoring