@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,7 +25,7 @@ public class UserServiceImpl implements UserService {
     public List<UserResponse> findAll() {
         return userRepository.findAll().stream()
                 .map(this::mapUserToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
